complete z-index fix for contact icons, send message button size, general resizing of elements for mobile view

--- a/index.css
+++ b/index.css
@@ -43,12 +43,17 @@ main {
     background-color: #999;
     margin: auto 0;
 }
-.contentInfo h5, .contentInfo h4, .contentInfo h6{
+.contentInfo h5, .contentInfo h4, .contentInfo h6, h3{
     color: #dfdfdf;
+    font-weight: normal;
+}
+.contentInfoSm p, .contentInfo li {
+    color: #999;
+    font-size: 1rem;
 }
 .contentInfo p, .contentInfo li {
     color: #999;
-    font-size: 1rem;
+    font-size: .75rem;
 }
  .headingHr {
     width: 5rem;
@@ -72,6 +77,7 @@ main {
      color: #dfdfdf;
      border: .15rem solid #dbb238;
      height: 3rem;
+     width: 10.25rem;
  }
 #resume {
     background-color: #222220;
